--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "@eva-design/eva": "^1.3.1",
     "@ui-kitten/components": "^4.3.2",
     "@ui-kitten/eva-icons": "^4.3.2",
+    "easy-peasy": "^3.2.6",
     "expo": "~36.0.0",
     "lottie-ios": "3.1.3",
     "lottie-react-native": "^3.3.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
     "react-native-svg": "^9.13.6",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
     "redux": "^4.0.5"
   },
   "devDependencies": {
